[tool.poetry]
name = "pmlan"
version = "0.1.0"
description = "Project to work through the Probabilistic Machine Learning An Introduction book from Kevin P. Murphy (2022)"
authors = ["marc_buettner"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
jupyter = "^1.0.0"
pytest = "^7.4.3"
cookiecutter = "^2.4.0"
pandas = "^2.1.2"
scikit-learn = "^1.3.2"
seaborn = "^0.13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
